# Mnemosine3BackEnd

./: .dockerignore  .gitignore  =4  Dockerfile  README.md  gitcommitndpush  lista.txt  manage.py  pyproject.toml  requirements.txt  requirements_bkup.txt
MnemosineV3_0/: asgi.py  models.py  settings copy.py  settings.example.py  settings.py  urls.py  wsgi.py
MnemosineV3_0/conversionDBtools/: change_users_id.py
MnemosineV3_0/local_tools/: notused_mongo_timestamp.py  permissions.json  permissions.py  role_has_permissions.json  roles_.json  user_has_permission.json  user_has_roles.json
authentication/: backends.py  custom_jwt.py  models.py  mongo_queries.py  role_views.py  urls.py  user_documents.py  views.py
authentication/migrations/: 0001_initial.py
user_queries/: mongo_queries.py  ol'view  urls.py  views.py
user_queries/dataclasses/: documents.py  footnotes_and_bibliographies.py  pictures.py  research_changes_data.py  research_history_changes.py  research_inventory_data.py
user_queries/driver_database/: mongo.py
user_queries/shemas/: appraisal_shema.py  bibliography_shema.py  catalog_elements_shema.py  catalogs_shema.py  cities_shema.py  contacts_shema.py  countries_shema.py  document_shema.py  exhibitions_shema.py  footnote_shema.py  genders_shema.py  institutions_shema.py  modules_shema.py  movements_shema.py  photograph_shema.py  piece_shema.py  prorogations_shema.py  reports_shema.py  research_shema.py  research_update_payload.py  restorarions_shema.py  restorations_shema.py  states_shema.py  subgenders_shema.py  template_reports_shema.py  (+1 more)
(+44 files in other folders)
